--- a/Resources/Private/Language/locallang_stylingcockpitbackend.xlf
+++ b/Resources/Private/Language/locallang_stylingcockpitbackend.xlf
@@ -9,6 +9,9 @@
 			<trans-unit id="mlang_tabs_tab" resname="mlang_tabs_tab">
 				<source></source>
 			</trans-unit>
+			<trans-unit id="backendName" resname="mlang_labels_tabdescr">
+                <source>Styling Cockpit</source>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
